# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grlib"
version = "1.0.10"
description = "Gesture recognition library for Python"
readme = "README.md"
authors = [{ name = "Jan Warchocki", email = "j.warchocki@student.tudelft.nl" },
    {name = "Mikhail Vlasenko", email = "m.vlasenko@student.tudelft.nl"}]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy ~= 1.21.4",
    "pandas ~= 1.3.4",
    "mediapipe ~= 0.8.9",
    "scikit-learn ~= 1.2.2",
    "opencv-contrib-python ~= 4.5.4.50",
    "imutils ~= 0.5.4",
    "natsort ~= 8.3.1",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/mikhail-vlasenko/grlib"
